// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render renders radio button group 1`] = `
.c0 > label {
  margin-right: 8px;
}

.c0 > label:last-child {
  margin-right: 0;
}

.c6 {
  margin-left: 4px;
  font: 400 12px/20px 'Roboto';
}

.c2 {
  position: relative;
}

.c5 {
  pointer-events: none;
  width: 16px;
  height: 16px;
  border: 1px solid rgba(44,44,44,0.16);
  border-radius: 50%;
  position: relative;
  display: block;
}

.c5:after {
  content: '';
  display: block;
  border-radius: 50%;
  position: absolute;
  top: calc(50% - 3px);
  left: calc(50% - 3px);
  width: 6px;
  height: 6px;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  width: 16px;
  height: 16px;
  position: absolute;
  top: 0;
  left: 0;
  cursor: pointer;
  margin: 0;
  padding: 0;
  border-radius: 50%;
}

.c3:focus {
  outline: none;
}

.c3:hover + .c4 {
  border: 1px solid #47DB99;
}

.c3:checked + .c4 {
  border: 1px solid #1785FB;
}

.c3:checked:disabled + .c4 {
  border: 1px solid rgba(44,44,44,0.16);
}

.c3:checked + .c4::after {
  opacity: 1;
  background: #1785FB;
  -webkit-animation: jMKEOZ 300ms;
  animation: jMKEOZ 300ms;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
}

.c3:checked:disabled + .c4::after {
  background: rgba(44,44,44,0.16);
}

.c3:disabled:hover {
  cursor: not-allowed;
}

.c3:disabled + .c4 {
  background-color: #E2E6E3;
}

.c3:disabled:hover + .c4 {
  border: 1px solid rgba(44,44,44,0.16);
}

<div
  className="c0"
>
  <label
    className="c1"
  >
    <div
      className="c2"
    >
      <input
        checked={false}
        className="c3"
        disabled={false}
        name="wadus"
        onChange={[Function]}
        type="radio"
        value="hola"
      />
      <span
        className="c4 c5"
      />
    </div>
    <div
      className="c6"
    >
      Hola
    </div>
  </label>
  <label
    className="c1"
  >
    <div
      className="c2"
    >
      <input
        checked={false}
        className="c3"
        disabled={false}
        name="wadus"
        onChange={[Function]}
        type="radio"
        value="mundo"
      />
      <span
        className="c4 c5"
      />
    </div>
    <div
      className="c6"
    >
      Mundo
    </div>
  </label>
</div>
`;

exports[`render renders with label 1`] = `
.c5 {
  margin-left: 4px;
  font: 400 12px/20px 'Roboto';
}

.c1 {
  position: relative;
}

.c4 {
  pointer-events: none;
  width: 16px;
  height: 16px;
  border: 1px solid rgba(44,44,44,0.16);
  border-radius: 50%;
  position: relative;
  display: block;
}

.c4:after {
  content: '';
  display: block;
  border-radius: 50%;
  position: absolute;
  top: calc(50% - 3px);
  left: calc(50% - 3px);
  width: 6px;
  height: 6px;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  width: 16px;
  height: 16px;
  position: absolute;
  top: 0;
  left: 0;
  cursor: pointer;
  margin: 0;
  padding: 0;
  border-radius: 50%;
}

.c2:focus {
  outline: none;
}

.c2:hover + .c3 {
  border: 1px solid #47DB99;
}

.c2:checked + .c3 {
  border: 1px solid #1785FB;
}

.c2:checked:disabled + .c3 {
  border: 1px solid rgba(44,44,44,0.16);
}

.c2:checked + .c3::after {
  opacity: 1;
  background: #1785FB;
  -webkit-animation: jMKEOZ 300ms;
  animation: jMKEOZ 300ms;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
}

.c2:checked:disabled + .c3::after {
  background: rgba(44,44,44,0.16);
}

.c2:disabled:hover {
  cursor: not-allowed;
}

.c2:disabled + .c3 {
  background-color: #E2E6E3;
}

.c2:disabled:hover + .c3 {
  border: 1px solid rgba(44,44,44,0.16);
}

<label
  className="c0"
>
  <div
    className="c1"
  >
    <input
      checked={false}
      className="c2"
      disabled={false}
      name=""
      onChange={[Function]}
      type="radio"
      value="wadus"
    />
    <span
      className="c3 c4"
    />
  </div>
  <div
    className="c5"
  >
    Wadus
  </div>
</label>
`;

exports[`render renders without crashing 1`] = `
.c1 {
  position: relative;
}

.c4 {
  pointer-events: none;
  width: 16px;
  height: 16px;
  border: 1px solid rgba(44,44,44,0.16);
  border-radius: 50%;
  position: relative;
  display: block;
}

.c4:after {
  content: '';
  display: block;
  border-radius: 50%;
  position: absolute;
  top: calc(50% - 3px);
  left: calc(50% - 3px);
  width: 6px;
  height: 6px;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  width: 16px;
  height: 16px;
  position: absolute;
  top: 0;
  left: 0;
  cursor: pointer;
  margin: 0;
  padding: 0;
  border-radius: 50%;
}

.c2:focus {
  outline: none;
}

.c2:hover + .c3 {
  border: 1px solid #47DB99;
}

.c2:checked + .c3 {
  border: 1px solid #1785FB;
}

.c2:checked:disabled + .c3 {
  border: 1px solid rgba(44,44,44,0.16);
}

.c2:checked + .c3::after {
  opacity: 1;
  background: #1785FB;
  -webkit-animation: jMKEOZ 300ms;
  animation: jMKEOZ 300ms;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
}

.c2:checked:disabled + .c3::after {
  background: rgba(44,44,44,0.16);
}

.c2:disabled:hover {
  cursor: not-allowed;
}

.c2:disabled + .c3 {
  background-color: #E2E6E3;
}

.c2:disabled:hover + .c3 {
  border: 1px solid rgba(44,44,44,0.16);
}

<label
  className="c0"
>
  <div
    className="c1"
  >
    <input
      checked={false}
      className="c2"
      disabled={false}
      name=""
      onChange={[Function]}
      type="radio"
      value="wadus"
    />
    <span
      className="c3 c4"
    />
  </div>
</label>
`;
